# artifacts

./: AGENTS.md  CHANGELOG.md  README.md  artifacts.py  pyproject.toml  requirements.txt
data/: patterns.json
lib/: apk_file.py  fix_compression.py  manifest.py  match_network.py  match_strings.py  similarity.py
